<resources>
    <string name="app_name">MonitorApplication</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_proceed">Proceed</string>
    <string name="loading">Loading</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="press_again_to_exit">Press back again to exit.</string>
    <string name="title_activity_maps">Map</string>


    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="logout">Logout</string>
    <string name="place">Place Name :</string>
    <string name="by_jayapriya">by Jayapriya</string>
    <string name="contemporary_wiretapping_using_android_geofencing_with_a_centralized_content_management_system">Contemporary Wiretapping using Android Geofencing with a Centralized Content Management System</string>

    <integer name="map_type_normal">1</integer>
    <integer name="map_type_hybrid">2</integer>
    <integer name="map_type_satellite">3</integer>
    <integer name="map_type_terrain">4</integer>
</resources>
